cmake_minimum_required(VERSION 3.1)
project(grind25)

set(CMAKE_CXX_STANDARD 14)

add_executable(weird cses/weird_algorithm.cpp)
add_executable(dice cses/dice_combinations.cpp)
add_executable(coins cses/minimizing_coins.cpp)
add_executable(coincomb1 cses/coin_combinations_1.cpp)
add_executable(coincomb2 cses/coin_combinations_2.cpp)
add_executable(digits cses/removing_digits.cpp)
add_executable(grid cses/grid_paths.cpp)
add_executable(bookshop cses/book_shop.cpp)
add_executable(array cses/array_description.cpp)
add_executable(towers cses/counting_towers.cpp)