cmake_minimum_required(VERSION 3.6)
project(grind25)

set(CMAKE_CXX_STANDARD 14)

add_executable(weird cses/weird_algorithm.cpp)

add_executable(distinct cses/distinct_numbers.cpp)

add_executable(dice cses/dice_combinations.cpp)
add_executable(coins cses/minimizing_coins.cpp)
add_executable(coincomb1 cses/coin_combinations_1.cpp)
add_executable(coincomb2 cses/coin_combinations_2.cpp)
add_executable(digits cses/removing_digits.cpp)
add_executable(grid cses/grid_paths.cpp)
add_executable(bookshop cses/book_shop.cpp)
add_executable(array cses/array_description.cpp)
add_executable(towers cses/counting_towers.cpp)
add_executable(distance cses/edit_distance.cpp)
add_executable(rectangle cses/rectangle_cutting.cpp)
add_executable(money cses/money_sums.cpp)
add_executable(removal cses/removal_game.cpp)
add_executable(sets cses/two_sets_2.cpp)
add_executable(subsequence cses/increasing_subsequence_n^2.cpp)
add_executable(subsequence2 cses/increasing_subsequence_nlogn.cpp)
add_executable(projects cses/projects.cpp)
add_executable(apartments cses/apartments.cpp)
add_executable(ferris cses/ferris_wheel.cpp)
add_executable(tickets cses/concert_tickets.cpp)
add_executable(restaurant cses/restaurant_customers.cpp)
add_executable(movie cses/movie_festival.cpp)
add_executable(sumoftwo cses/sum_two_values.cpp)
add_executable(subarray cses/max_subarray_sum.cpp)
add_executable(stick cses/stick_lengths.cpp)
add_executable(missing cses/missing_coin_sum.cpp)
add_executable(collecting cses/collecting_numbers.cpp)
add_executable(collecting2 cses/collecting_numbers_2.cpp)
add_executable(playlist cses/playlist.cpp)
add_executable(stacktowers cses/towers.cpp)
add_executable(trafficlights cses/traffic_lights.cpp)
add_executable(josephus1 cses/josephus_1.cpp)
add_executable(josephus2 cses/josephus_2.cpp)
add_executable(nestedranges cses/nested_ranges_check.cpp)
